src/scss/themes/ng/body.scss
/* ... */
// Panel
.cui-panel {
	border-top: 1px solid $layer-header-border;
	border-bottom: 1px solid $layer-header-border;

	& + &,
	&:first-child {
		border-top: none;
	}

	&:last-child {
		border-bottom: none;
	}

	&-closed {
		> .cui-panel-body {
			display: none;
		}
	}
}

.cui-panel-header {
	background: $toolbar-background;
	position: relative;
	flex-shrink: 0;
	box-sizing: content-box;

	.cui-button {
		width: 100%;
		height: 100%;
		align-items: stretch;

		.cui-button-visual {
			@include button-reset;
			line-height: 22px;
			justify-content: flex-start;
			padding: 6px $padding;
			color: $button-color;
		}

		&:active {
			.cui-button-visual {
				background: darken($zebra-color, 5%);
				color: $button-color;
			}
		}

		.cui-button-left {
			width: 22px;
			padding-top: 1px;
		}

		.cui-button-center {
			span {
				white-space: normal;
			}
		}

		.fa-angle-right {
			padding-left: 3px;
		}

		.fa-angle-right {
			margin-top: -1px;
		}
	}
}


// Label
.cui-label {
	display: inline-flex;
	flex: 0 0 auto;
	align-items: center;
	max-width: 100%;
	line-height: 18px;

	&.cui-tmpl-label-rotate-90 {
		white-space: nowrap;
		margin: $padding/2 0;
		flex-shrink: 0;
		max-width: none;
		display: inline-block; // has to be a non-flex element because in Firefox percentage margin is not dependent on the element width in flex elements, see #https://bugzilla.mozilla.org/show_bug.cgi?id=958714

		&:before {
			content: "";
			float: left;
			margin-top: calc(100% - #{$padding});
		}

		> .cui-label-transform {
			transform: rotate(-90deg)  translateX(-3px) translateY(100%);
			transform-origin: left bottom;
			clear: left;
		}

		.cui-label-content {
			white-space: nowrap !important;
		}
	}

	&-icon {
		&:empty {
			display: none;
		}

		.fa {
			line-height: 18px;
		}
	}

	&-size-mini {
		font-size: $label-mini;
		line-height: 14px;
	}

	&-size-big,
	&-size-bigger {
		.cui-label-icon {
			.fa {
				font-size: inherit;
			}
		}
	}

	&-size-big {
		font-size: $label-big;
	}

	&-size-bigger {
		font-size: $label-bigger;
	}

	&-icon:not(:empty) + .cui-label-content:not(:empty) {
		padding-left: 7px;
	}

	&-content {
		flex: 0 0 auto;
		max-width: 100%;
		@include ellipsis;

		&:empty {
			display: none;
		}

		p {
			&:first-child {
				margin-top: 0;
			}

			&:last-child {
				margin-bottom: 0;
			}
		}

		// highlight
		em {
			background: hsl(55,100%,60%);
			font-style: normal;
		}
	}

	&-appearance-secondary {
		color: $secondary-color;
	}

	&--padded {
		padding: $padding;

		+ .cui-block > .cui-block-header {
			padding-top: $padding/2;
		}
	}
}

// Label: Markdown
.cui-label-markdown .cui-label-content {
	display: block;

	h1, h2, h3, h4, h5, h6 {
		font-weight: normal;
		margin: 0 0 $padding;
	}

	h1 {
		font-size: 24px;
		line-height: 30px;
	}

	h2 {
		font-size: 20px;
		line-height: 25px;
	}

	a {
		color: $highlight-color;
		text-decoration: underline;
	}

	em {
		background: none;
		font-style: italic;
	}

	p,
	pre,
	blockquote,
	table {
		margin: 0 0 16px;
  }

  & > p,
  & > pre,
  & > table,
  & > blockquote {
		&:last-child {
			margin-bottom: 0;
    }
  }

  table {
    border: none;
    table-layout: auto;
    display: block;
    width: 100%;
    overflow: auto;
    word-break: keep-all;

    td, th {
			padding: 7px 12px;
			border: 1px solid hsl(0,0%,87%);
    }

    th {
			font-weight: bold;
			text-align: center;
    }

    tbody tr:nth-child(odd) {
			background: hsl(0,0%,97%);
    }

    col {
			width: auto;
    }
  }

  blockquote {
    padding: 8px 12px;
    border-left: 5px solid #eee;
  }

  code {
    border: none;
    background: hsl(0,0%,97%);
    white-space: pre-wrap;
  }

  pre {
    padding: 12px 15px;
    font-size: 13px;
    line-height: 1.45;
    background: hsl(0,0%,97%);
    white-space: pre-wrap;
    border-radius: 3px;
    border: none;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }

  hr {
    margin-top: 6px;
    margin-bottom: 6px;
    border: 0;
    border-top: 1px solid #dfdfdf;
  }
}

// Label: Multiline
.cui-label-multiline {
	// Conflict: makes it center vertically align in center
	// align-self: stretch;
	max-width: 100%; // prevent overflow when its the child of a flex parent
	display: flex;

	& + & {
		margin-top: 7px;
	}

	&:not(.cui-label-markdown) {
		.cui-label-content {
			word-wrap: break-word; // IE fallback
			word-break: break-word;
			white-space: pre-wrap;
		}
	}

	> .cui-label-content {
		flex: 1 1 auto;
		white-space: normal;
	}

	.cui-label-content span {
		// white-space: normal;
		// white-space has to pre-wrap - otherwise it breaks the whole concept of a multiline label
		// example: collection description
	}
}

// Label: Manage Overflow

.cui-label-manage-overflow {
	position: relative;
	display: block;

	&.cui-label--measure-overflow {
		> .cui-label-content {
			max-height: 100px;
		}
	}

	> .cui-label-content {
		max-height: 75px;
		overflow: hidden;
	}

	.cui-label-manage-overflow-button {
		position: absolute;
		right: 0;
		bottom: 0;
		background: linear-gradient(to right, hsla(0,0%,100%,0), hsl(0,0%,100%) 10px);
		padding: 0 0 0 10px !important;
	}

	&.cui-label--show-overflow {
		> .cui-label-content {
			max-height: none !important;
		}

		.cui-label-manage-overflow-button {
			position: static;
			float: right;
		}
	}
}

// Label: Placeholder
.cui-empty-label {
	color: $muted-color;
	font-style: italic;
	margin: 0;
	cursor: default;

	.cui-label-content {
		display: inline-block;
	}
}

// Label: Centered
.cui-label-centered {
	flex: 1 1 auto;
	display: flex;
	align-items: center;
	justify-content: center;

	> .cui-label-content {
		text-align: center;
		flex-grow: 0;
	}
}
/* ... */

